--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-# Redireciona todos os requests para o diretório public/ e habilita o mod_rewrite
-RewriteEngine on
-RewriteRule ^(.*) public/$1 [L]
+
+RewriteEngine On
+# RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ /public/index.php [QSA,L]
