--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "GPL-3.0-or-later",
     "autoload": {
         "psr-4": {
-            "App\\": "App/",
-            "Core\\": "Core/"
+            "App\\": "app/",
+            "Src\\": "src/"
         }
     },
     "authors": [
@@ -18,6 +18,18 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.0",
-      "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-json": "*",
+        "filp/whoops": "^2.14",
+        "symfony/dotenv": "*",
+        "symfony/cache": "6.3.x-dev"
+    },
+    "require-dev": {
+        "symfony/thanks": "^1.2@dev"
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/thanks": true
+        }
     }
 }
