--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,6 @@
-Options -MultiViews
-RewriteEngine On
 Options -Indexes
+RewriteEngine On
+RewriteBase /public/
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
+RewriteRule ^ index.php [QSA,L]
