English is now the default language and the application is ready for PHP 8.1

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "samuel-pietro/pframe",
-    "description": "Um framework PHP usando o padrão MVC",
+    "description": "Quick Start Framework for Free Development",
     "type": "project",
     "license": "GPL-3.0-or-later",
     "autoload": {
