--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 
 RewriteEngine On
-# RewriteCond %{REQUEST_FILENAME} !-d
+
+RewriteRule    ^(.+[^/])/$ /$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ /public/index.php [QSA,L]
