feat: ready for translations

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_DESC='Um framework PHP usando o padrão MVC'
 APP_KEYS='mvc, php, framework'
 APP_AUTHOR='Samuel Pietro'
 DEBUG=true
+LANG=en
 
 DB_HOST=localhost
 DB_NAME=pframe
@@ -11,4 +12,4 @@ DB_PASS=
 DB_PORT=3306
 DB_CHARSET=utf8mb4
 
-BASE_URL=http://localhost:8000
+BASE_URL=http://localhost
