--- a/.env
+++ b/.env
@@ -3,13 +3,16 @@ APP_DESC='Um framework PHP usando o padrão MVC'
 APP_KEYS='mvc, php, framework'
 APP_AUTHOR='Samuel Pietro'
 DEBUG=true
-LANG=en
+LANG=en.UTF-8
+BASE_URL=https://localhost
 
+# Banco de dados
 DB_HOST=localhost
 DB_NAME=pframe
 DB_USER=root
-DB_PASS=
+DB_PASS=root
 DB_PORT=3306
 DB_CHARSET=utf8mb4
+DB_SSL_CA_FILE=/resources/ssl/database.crt.pem
+DB_VERIFY_CERT=false
 
-BASE_URL=http://localhost
