feat: Plates template engine is now here!

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_KEYS='mvc, php, framework'
 APP_AUTHOR='Samuel Pietro'
 DEBUG=true
 LANG=en.UTF-8
+APP_LANGUAGE=english
 BASE_URL=https://localhost
 
 # Banco de dados
