--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=8.1",
-        "ext-pdo": "*",
-        "filp/whoops": "^2.14",
-        "symfony/dotenv": "*",
-        "symfony/cache": "6.3.x-dev"
+      "php": ">=8.1",
+      "ext-pdo": "*",
+      "filp/whoops": "^2.14",
+      "symfony/dotenv": "*",
+      "symfony/cache": "6.3.x-dev",
+      "league/plates": "*"
     },
     "require-dev": {
         "symfony/thanks": "^1.2@dev",
