docs: Appending missing PHPDoc

--- a/.env
+++ b/.env
@@ -1,19 +1,49 @@
+# The name of the application
 APP_NAME=PFrame
+
+# A description of the application
 APP_DESC='Um framework PHP usando o padrão MVC'
+
+# Keywords or tags associated with the application
 APP_KEYS='mvc, php, framework'
+
+# The author or creator of the application
 APP_AUTHOR='Samuel Pietro'
+
+# Flag indicating whether debugging is enabled
 DEBUG=true
+
+# The language setting for the application
 LANG=en.UTF-8
+
+# The language preference for the application
 APP_LANGUAGE=english
-BASE_URL=https://localhost
 
-# Banco de dados
+# The base URL of the application
+BASE_URL=http://localhost
+
+# Database Configuration
+
+# The hostname or IP address of the database server
 DB_HOST=localhost
-DB_NAME=pframe
-DB_USER=root
-DB_PASS=root
-DB_PORT=3306
-DB_CHARSET=utf8mb4
-DB_SSL_CA_FILE=/resources/ssl/database.crt.pem
-DB_VERIFY_CERT=false
 
+# The name of the database to connect to
+DB_NAME=pframe
+
+# The username for the database connection
+DB_USER=root
+
+# The password for the database connection
+DB_PASS=root
+
+# The port number for the database connection
+DB_PORT=3306
+
+# The character set for the database connection
+DB_CHARSET=utf8mb4
+
+# The path to the SSL CA file for secure database connections
+DB_SSL_CA_FILE=/resources/ssl/database.crt.pem
+
+# Flag indicating whether to verify the database server's SSL certificate
+DB_VERIFY_CERT=false
